--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,6 +1,6 @@
 {{>layout/header}}
 
-    <h1>Woong's Rehab Note (Ver.2)</h1>
+    <h1>Woong's Rehab Note (Ver.2-1)</h1>
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-6">
